# FullOps-Squad

./: .antigravityrules  .gitignore  README.md  agents_harness_review.md
.agent/handovers/: to_frontend_dev.md
.agent/rules/: backend-code-style.md  base.md  devops.md  git-rules.md  unit-testing.md
.agent/workflows/: architect.md  backend.md  coordinator.md  devops.md  frontend.md  master.md  qa.md
.agents/: AGENTS.md  ARCHITECTURE.md  BACKEND.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  SKILLS.md
.agents/contexts/: _TEMPLATE.md  architect.md  backend_dev.md  devops.md  frontend_dev.md  qa_tester.md
.agents/handovers/: _README.md  _TEMPLATE.md  to_architect.md  to_backend_dev.md  to_devops.md  to_frontend_dev.md  to_qa_tester.md
.agents/rules/: architect.md  base.md  correction-guides.md  dev-backend-fastapi.md  dev-frontend-svelte.md  frontend-code-style.md  integration-testing.md  linter-rules.md  prompt-engineer.md  refactoring.md
.agents/skills/: _README.md
.agents/skills/Debug/: SKILL.md
.agents/workflows/: _README.md  architect.md  backend.md  coordinator.md  design.md  devops.md  frontend.md  improve.md  master.md  qa.md  release.md
.artifacts/handovers/: to_architect.md  to_backend_dev.md  to_devops.md
.artifacts/projects/: context.md  domain_rules.md  milestones.md  tech_stack.md  version_control_guidelines.md
backend/: pyproject.toml
backend/app/core/: config.py
backend/app/src/engine/: dummy.py
frontend/: GEMINI.md  README.md  eslint.config.js  package-lock.json  package.json
(+60 files in other folders)
