[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.4",
    "sqlmodel>=0.0.27",
    "ruff>=0.3.0",
]

[tool.ruff]
# linter-rules.md 준수: 88자 제한
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# 기본 규칙 및 필요한 추가 규칙 선택
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (Import 정렬)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle (Docstring 검증 - Google style 필요시 추가 설정)
    "ANN",  # flake8-annotations (Type hints 강제)
]

ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
# Google 스타일 docstring 강제 (STYLE-003)
convention = "google"

[tool.ruff.lint.isort]
# 임포트 순서 (IMP-001)
known-first-party = ["app", "src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
